# krkn-ai-pipeline-poc

./: .gitignore  README.md  demo.py  pyproject.toml
.github/workflows/: test.yml
examples/: after.yaml  before.yaml
krkn_ai_poc/pipeline/: context.py  plugins.py  registry.py  runner.py
krkn_ai_poc/plugins/capability/: has_pvcs.py
krkn_ai_poc/plugins/inventory/: default.py
krkn_ai_poc/plugins/probe/: prometheus_reachability.py
krkn_ai_poc/plugins/recommend/: scenario_pvc.py
krkn_ai_poc/plugins/render/: jinja2.py
krkn_ai_poc/templates/: krkn-ai.yaml.j2
tests/integration/: test_e2e.py
tests/unit/: test_context.py  test_plugins.py  test_runner.py
