[project]
name = "krkn-ai-pipeline-poc"
version = "0.1.0"
description = "Vertical-slice PoC for krkn-ai#188 — 5-stage pluggable discovery pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kubernetes>=29.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyyaml>=6.0.3",
    "responses>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["krkn_ai_poc"]
